--- a/css/styles.css
+++ b/css/styles.css
@@ -37,3 +37,13 @@ img {
   float: right;
   margin-right: 15px;
 }
+
+#difference {
+  padding-top: 15px;
+  font-size: 130%;
+}
+
+#text {
+  font-size: 150%;
+  color: #580e48;
+}
